# goit-pythonweb-hw-06

./: README.md  connect.py  crud_operations.py  db_models.py  error_handler.py  logger_config.py  main.py  my_select.py  seed.py  settings.py
01/: db_models.py  main.py  my_select.py  pyproject.toml  seed.py
01/migrations/versions/: 1d969bc98546_init.py
migrations/: env.py
migrations/versions/: 399aa4e5a4df_proper_ondelete_settings_3.py  796398e8d291_proper_ondelete_settings_2.py  7fc7feae4015_proper_ondelete_settings_5.py  9e320b338166_proper_ondelete_settings.py  aa300222e1f7_proper_ondelete_settings_4.py  b02cbf5e33cd_remove_surnames.py
